spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__far_too_many_positional_method_args.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct X {}

impl X {
    fn function(self, a: bool, b: bool) -> bool {a}
}

fn main(x: X) -> bool {
    x.function(true, true, true, true)
}


error: Too many arguments. Expected 2, got 4
  ┌─ testinput:8:16
  │
4 │     fn function(self, a: bool, b: bool) -> bool {a}
  │     ----------------------------------------------- function defined here
  ·
8 │     x.function(true, true, true, true)
  │                ^^^^^^^^^^^^^^^^^^^^^^
  │                │           │     │
  │                │           │     Unexpected argument
  │                │           Unexpected argument
  │                Expected 2 arguments
