spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__long_duplicate_named_arg.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern fn test(a: bool, b: bool) -> bool;
fn main() -> bool {
    test(a: true, a: true, b: true)
}


error: a specified multiple times
  ┌─ testinput:3:19
  │
1 │ extern fn test(a: bool, b: bool) -> bool;
  │ ----------------------------------------- function defined here
2 │ fn main() -> bool {
3 │     test(a: true, a: true, b: true)
  │          -        ^ Later specified here
  │          │         
  │          First specified here
